--- a/package.json
+++ b/package.json
@@ -65,7 +65,11 @@
     "socket.io-client": "^4.7.5",
     "typed.js": "^2.1.0",
     "uuid": "^9.0.1",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+
+ 
+    "chart.js": "4.4.3"
+
   },
   "devDependencies": {
     "@types/lodash": "^4.17.0",
@@ -103,6 +107,14 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3",
     "vite": "^5.2.7",
-    "vite-tsconfig-paths": "^4.3.2"
+    "webpack": "5.93.0",
+    "webpack-cli": "5.1.4",
+    "vite-tsconfig-paths": "^4.3.2",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "del": "7.1.0",
+    "mini-css-extract-plugin": "2.9.0",
+    "remove-files-webpack-plugin": "^1.5.0",
+    "rtlcss-webpack-plugin": "4.0.7"
+
   }
 }
