--- a/package.json
+++ b/package.json
@@ -14,86 +14,84 @@
   },
   "dependencies": {
     "@elastic/apm-rum": "^5.16.0",
-    "@headlessui/react": "^1.7.18",
-    "@react-pdf/renderer": "^3.4.2",
     "@formatjs/intl-pluralrules": "5.2.14",
     "@formatjs/intl-relativetimeformat": "11.2.14",
     "@fortawesome/fontawesome-free": "6.6.0",
+    "@headlessui/react": "^1.7.18",
+    "@popperjs/core": "^2.11.8",
+    "@react-pdf/renderer": "^3.4.2",
+    "@reduxjs/toolkit": "^2.2.3",
     "animate.css": "4.1.1",
     "apexcharts": "3.51.0",
-    "@popperjs/core": "^2.11.8",
+    "axios": "^1.6.8",
     "bootstrap": "5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "@reduxjs/toolkit": "^2.2.3",
+    "chart.js": "4.4.3",
     "clsx": "2.1.1",
+    "date-fns": "^3.6.0",
     "formik": "2.4.6",
+    "html-react-parser": "^5.1.10",
     "line-awesome": "1.3.0",
+    "lodash": "^4.17.21",
+    "millify": "^6.1.0",
     "nouislider": "15.8.1",
     "prism-react-renderer": "2.3.1",
     "prism-themes": "1.9.0",
     "prismjs": "1.29.0",
+    "qs": "6.12.3",
+    "react": "^18.2.0",
     "react-apexcharts": "1.4.1",
     "react-bootstrap": "2.10.4",
     "react-copy-to-clipboard": "5.1.0",
-    "react-flatpickr": "^3.10.13",
-    "react-inlinesvg": "4.1.3",
-    "react-intl": "^6.6.8",
-    "react-query": "3.39.3",
-    "react-select": "^5.8.0",
-    "react-table": "^7.8.0",
-    "react-topbar-progress-indicator": "4.1.1",
-    "socicon": "3.0.5",
-    "qs": "6.12.3",
-    "axios": "^1.6.8",
-    "date-fns": "^3.6.0",
-    "html-react-parser": "^5.1.10",
-    "lodash": "^4.17.21",
-    "millify": "^6.1.0",
-    "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-fast-compare": "^3.2.2",
+    "react-flatpickr": "^3.10.13",
     "react-icons": "^5.0.1",
+    "react-inlinesvg": "4.1.3",
+    "react-intl": "^6.6.8",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-query": "3.39.3",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "react-sticky-box": "^2.0.5",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
+    "react-topbar-progress-indicator": "4.1.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.72.0",
+    "socicon": "3.0.5",
     "socket.io-client": "^4.7.5",
     "typed.js": "^2.1.0",
     "uuid": "^9.0.1",
-    "yup": "^1.4.0",
-
- 
-    "chart.js": "4.4.3"
-
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/bootstrap": "5.2.10",
+    "@types/chart.js": "2.9.41",
+    "@types/jest": "29.5.12",
     "@types/lodash": "^4.17.0",
+    "@types/node": "22.0.0",
+    "@types/prismjs": "1.26.4",
+    "@types/qs": "6.9.15",
     "@types/react": "^18.2.73",
+    "@types/react-copy-to-clipboard": "5.0.7",
     "@types/react-dom": "^18.2.23",
     "@types/react-lazy-load-image-component": "^1.6.3",
+    "@types/react-table": "^7.7.20",
     "@types/redux-persist": "^4.3.1",
+    "@types/sass-loader": "8.0.8",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.19",
-    "@types/bootstrap": "5.2.10",
-    "@types/chart.js": "2.9.41",
-    "@types/jest": "29.5.12",
-    "@types/node": "22.0.0",
-    "@types/prismjs": "1.26.4",
-    "@types/qs": "6.9.15",
+    "connect-history-api-fallback": "^2.0.0",
     "css-loader": "7.1.2",
-    "sass": "1.77.6",
-    "sass-loader": "16.0.0",
-    "@types/react-copy-to-clipboard": "5.0.7",
-    "@types/react-table": "^7.7.20",
-    "@types/sass-loader": "8.0.8",
+    "del": "7.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -102,19 +100,18 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-simple-import-sort": "^12.0.0",
+    "mini-css-extract-plugin": "2.9.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "remove-files-webpack-plugin": "^1.5.0",
+    "rtlcss-webpack-plugin": "4.0.7",
+    "sass": "1.77.6",
+    "sass-loader": "16.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3",
     "vite": "^5.2.7",
-    "webpack": "5.93.0",
-    "webpack-cli": "5.1.4",
     "vite-tsconfig-paths": "^4.3.2",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "del": "7.1.0",
-    "mini-css-extract-plugin": "2.9.0",
-    "remove-files-webpack-plugin": "^1.5.0",
-    "rtlcss-webpack-plugin": "4.0.7"
-
+    "webpack": "5.93.0",
+    "webpack-cli": "5.1.4"
   }
 }
